--- a/src/app/modules/appointment/pages/enterprise/components/location-enterprise/location-enterprise.component.html
+++ b/src/app/modules/appointment/pages/enterprise/components/location-enterprise/location-enterprise.component.html
@@ -8,7 +8,7 @@
     <section class="mt-5 text-center">
       <span class="font-normal text-x">
         <div class="mt-5"><strong>Latitud: </strong>{{ lat }}</div>
-        <div class="mt-5"><strong>longitud: </strong>{{ long }}</div>
+        <div class="mt-5"><strong>longitud: </strong>{{ lng }}</div>
       </span>
     </section>
   </div>
