--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -23,11 +23,12 @@
           </span>
         </ng-template>
       </div>
-      <span class="text-xs font-semibold">{{ buttonText }}</span>
+      <span>{{ buttonText }}</span>
     </button>
   </div>
   <div *ngIf="!isFormButton">
     <a
+      type="submit"
       class="w-full flex justify-center bg-transparent bg-tesis-500 hover:bg-transparent hover:text-tesis-700 font-semibold text-white py-2 px-4 border hover:border-tesis-500 border-transparent rounded"
       (click)="!isDisabled && onClick()"
     >
