--- a/src/app/modules/appointment/pages/service/modals/service-modal-form/service-modal-form.component.html
+++ b/src/app/modules/appointment/pages/service/modals/service-modal-form/service-modal-form.component.html
@@ -1,12 +1,11 @@
-<h2 mat-dialog-title class="text-center">Editar servicio</h2>
+<h2 mat-dialog-title class="text-center">
+  {{ data ? "Editar" : "Crear" }} servicio
+</h2>
 <mat-dialog-content class="mat-typography">
-  <app-service-form> </app-service-form>
+  <app-service-form
+    [formData]="this.data"
+    (onCreateOrUpdate)="createOrEdit($event)"
+    (onCancel)="cancel()"
+  >
+  </app-service-form>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-  <app-button
-    text="Cancelar"
-    class="mr-10"
-    (clickAction)="cancel()"
-  ></app-button>
-  <app-button text="Registrar" (clickAction)="edit()"></app-button>
-</mat-dialog-actions>
