--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -15,6 +15,9 @@
 // angular material
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+// bootstrap
+@import "~bootstrap/dist/css/bootstrap.css";
+
 // partials
 @import "partials/table";
 @import "partials/divider";
