--- a/src/app/modules/appointment/pages/enterprise/components/location-enterprise/location-enterprise.component.html
+++ b/src/app/modules/appointment/pages/enterprise/components/location-enterprise/location-enterprise.component.html
@@ -2,7 +2,7 @@
   <div class="p-5">
     <section class="mt-5">
       <span class="font-normal text-x">
-        <strong>Ubicación google map: </strong> {{ url }}
+        <strong>Ubicación google map: </strong> {{ uri }}
       </span>
     </section>
     <section class="mt-5 text-center">
