--- a/src/app/modules/appointment/pages/enterprise/enterprise.component.html
+++ b/src/app/modules/appointment/pages/enterprise/enterprise.component.html
@@ -20,9 +20,7 @@
     <app-location-enterprise
       [lat]="enterprise.lat!"
       [lng]="enterprise.lng!"
-      [url]="
-        'https://www.google.com/maps/place/Manticore+Labs/@-0.1746597,-78.494332,15z/data=!4m5!3m4!1s0x0:0x673d6a69c30f02fc!8m2!3d-0.1746607!4d-78.4943207'
-      "
+      [url]="enterprise.lat + '12' + enterprise.lng"
     >
     </app-location-enterprise>
   </section>
