--- a/src/app/modules/appointment/pages/schedule/forms/schedule-form/schedule-form.component.html
+++ b/src/app/modules/appointment/pages/schedule/forms/schedule-form/schedule-form.component.html
@@ -14,6 +14,7 @@
       <app-input
         id="dia"
         label="Dia"
+        [float]="false"
         [type]="'date'"
         [formGroup]="form"
         [required]="true"
@@ -23,6 +24,7 @@
       <app-input
         id="desde"
         label="Desde"
+        [float]="false"
         [type]="'datetime-local'"
         [formGroup]="form"
         [required]="true"
@@ -32,6 +34,7 @@
       <app-input
         id="hasta"
         label="Hasta"
+        [float]="false"
         [type]="'datetime-local'"
         [formGroup]="form"
         [required]="true"
