--- a/src/app/modules/appointment/pages/service/forms/service-form/service-form.component.html
+++ b/src/app/modules/appointment/pages/service/forms/service-form/service-form.component.html
@@ -25,6 +25,7 @@
         id="tiempoAproximado"
         label="Tiempo aproximado"
         placeholder="Ej: Bago"
+        [float]="false"
         [type]="'datetime-local'"
         [formGroup]="form"
         [required]="true"
@@ -35,6 +36,7 @@
         id="tiempoEspera"
         label="Tiempo espera"
         placeholder="Ej: Bago"
+        [float]="false"
         [type]="'datetime-local'"
         [formGroup]="form"
         [required]="true"
