--- a/src/app/shared/components/autocomplete/autocomplete.component.html
+++ b/src/app/shared/components/autocomplete/autocomplete.component.html
@@ -33,12 +33,13 @@
       (search)="onSearch($event)"
       (change)="onChange($event)"
       class="custom"
-      dropdownPosition="auto"
+      dropdownPosition="bottom"
       clearAllText="Limpiar"
       bindLabel="label"
       bindValue="value"
       notFoundText="No se encontraron resultados"
       appearance="underline"
+      appendTo="body"
       loadingText="Cargando..."
       #select
     >
