--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -8,7 +8,7 @@
   <div *ngIf="isFormButton">
     <button
       type="submit"
-      class="w-full flex justify-center bg-transparent hover:bg-tesis-500 text-tesis-700 font-semibold hover:text-white py-2 px-4 border border-tesis-500 hover:border-transparent rounded"
+      class="w-full flex justify-center bg-transparent hover:bg-tesis-500 text-tesis-700 font-semibold hover:text-tesis-400 py-2 px-4 border border-tesis-500 hover:border-transparent rounded"
       (click)="!isDisabled && onClick()"
     >
       <div *ngIf="icon">
@@ -29,7 +29,7 @@
   <div *ngIf="!isFormButton">
     <a
       type="submit"
-      class="w-full flex justify-center bg-transparent bg-tesis-500 hover:bg-transparent hover:text-tesis-700 font-semibold text-white py-2 px-4 border hover:border-tesis-500 border-transparent rounded"
+      class="w-full flex justify-center bg-transparent bg-tesis-500 hover:bg-transparent hover:text-tesis-700 font-semibold text-tesis-400 py-2 px-4 border hover:border-tesis-500 border-transparent rounded"
       (click)="!isDisabled && onClick()"
     >
       <div *ngIf="icon">
