--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -3,7 +3,7 @@
     [formGroup]="formGroup"
     [class.invalid]="control.touched && control.invalid"
   >
-    <span class="p-float-label">
+    <span *ngIf="float" class="p-float-label">
       <input
         pInputText
         *ngIf="!isTextarea"
@@ -36,6 +36,29 @@
         *ngIf="label"
         >{{ label }}{{ required ? "*" : "" }}</label
       >
+    </span>
+    <span *ngIf="!float">
+      <label
+        [for]="id"
+        style="color: #3f51b5; font-size: 12px"
+        [ngClass]="{
+          'text-red-500': control.errors && control.touched
+        }"
+        *ngIf="label"
+        >{{ label }}{{ required ? "*" : "" }}</label
+      >
+      <input
+        pInputText
+        *ngIf="!isTextarea"
+        [type]="type"
+        [placeholder]="placeholder"
+        [attr.name]="id"
+        [attr.id]="id"
+        [formControl]="control"
+        [readOnly]="readonly"
+        class="w-full"
+        autocomplete="off"
+      />
     </span>
     <small
       *ngIf="control.errors && control.touched && control.invalid"
