--- a/src/assets/scss/partials/_autocomplete.scss
+++ b/src/assets/scss/partials/_autocomplete.scss
@@ -1,50 +1,47 @@
-.ng-select.custom {
-  border: 0;
-  min-height: 0;
-  height: 1.5rem;
-  border-radius: 0;
-  margin-top: -4px;
+
+
+.ng-select.ng-select-single .ng-select-container {
+  background-color: rgba(243, 244, 246, 0.97);
+  border-radius: 0.5rem;
 }
 
-.ng-select.ng-select-opened>.ng-select-container {
-  background: rgba(230, 230, 230, 0);
-  border-color: rgba(255, 255, 255, 0);
+ng-select.ng-invalid.ng-touched .ng-select-container {
+  border: 1.5px #ef4444 solid;
+}
+
+.ng-select.ng-select-focused:not(.ng-select-opened) > .ng-select-container {
+  border-radius: 0.5rem;
+  border: 2px $primary-color solid;
+  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(255, 255, 255, 0);
+}
+
+.ng-select.ng-select-opened > .ng-select-container {
+  border-radius: 0.5rem;
+  border: 2px $primary-color solid;
+}
+
+.ng-select.ng-select-single .ng-select-container {
+  border-radius: 0.5rem;
 }
 
 .ng-select .ng-select-container {
-  color: #333;
-  background-color: rgba(255, 255, 255, 0);
+  color: $primary-color;
   border-radius: 4px;
-  border: 1px solid rgba(204, 204, 204, 0);
   min-height: 36px;
   align-items: center;
 }
 
-.ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {
-  font-size: .9em;
-  margin-bottom: 5px;
-  color: #333;
-  background-color: lighten($primary-color, 66%);
-  border-radius: 2px;
-  margin-right: 5px;
-}
-
-.ng-select.ng-select-focused:not(.ng-select-opened)>.ng-select-container {
-  border-color: rgba(255, 255, 255, 0);
-  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(255, 255, 255, 0);
-}
 
 .ng-dropdown-panel.ng-select-bottom {
   top: 100%;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border-top-color: $secondary-color;
-  margin-top: 8px;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
 }
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
-  background-color: lighten($primary-color, 66%);
-  color: $black-color;
+  background-color: #fcf7e8;
+  //font-size: 13px;
+  font-weight: bold;
 }
 
 .ng-select .ng-clear-wrapper {
@@ -55,3 +52,101 @@
   user-select: none;
   color: $primary-color;
 }
+
+
+.ng-select.ng-select-multiple .ng-select-container {
+  //min-height: 10px;
+  padding: 4.5px;
+  background-color: #F3F4F6;
+  border-radius: 0.5rem;
+}
+
+.ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {
+  font-size: 13px;
+  //margin-bottom: 5px;
+  color: $white-color;
+  background-color: $primary-color;
+  //margin-right: 10px;
+  font-weight: bold;
+  border-radius: 7px;
+}
+
+.ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value .ng-value-icon.left {
+  border: none;
+}
+
+.ng-dropdown-panel .ng-dropdown-panel-items {
+  font-size: 0.8rem;
+  background-color: white;
+  border: 2px $primary-color solid;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+}
+
+.ng-dropdown-panel.ng-select-bottom {
+  border: none;
+  background: none;
+}
+
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-disabled {
+  color: #495057;
+  font-size: 0.8rem;
+}
+
+//.ng-select.custom {
+//  border: 0;
+//  min-height: 0;
+//  height: 1.5rem;
+//  border-radius: 0;
+//  margin-top: -4px;
+//}
+//
+//.ng-select.ng-select-opened>.ng-select-container {
+//  background: rgba(230, 230, 230, 0);
+//  border-color: rgba(255, 255, 255, 0);
+//}
+//
+//.ng-select .ng-select-container {
+//  color: #333;
+//  background-color: rgba(255, 255, 255, 0);
+//  border-radius: 4px;
+//  border: 1px solid rgba(204, 204, 204, 0);
+//  min-height: 36px;
+//  align-items: center;
+//}
+//
+//.ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {
+//  font-size: .9em;
+//  margin-bottom: 5px;
+//  color: #333;
+//  background-color: lighten($primary-color, 66%);
+//  border-radius: 2px;
+//  margin-right: 5px;
+//}
+//
+//.ng-select.ng-select-focused:not(.ng-select-opened)>.ng-select-container {
+//  border-color: rgba(255, 255, 255, 0);
+//  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(255, 255, 255, 0);
+//}
+//
+//.ng-dropdown-panel.ng-select-bottom {
+//  top: 100%;
+//  border-bottom-right-radius: 4px;
+//  border-bottom-left-radius: 4px;
+//  border-top-color: $secondary-color;
+//  margin-top: 8px;
+//}
+//
+//.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
+//  background-color: lighten($primary-color, 66%);
+//  color: $black-color;
+//}
+//
+//.ng-select .ng-clear-wrapper {
+//  cursor: pointer;
+//  position: relative;
+//  width: 16px;
+//  -webkit-user-select: none;
+//  user-select: none;
+//  color: $primary-color;
+//}
