--- a/src/app/modules/appointment/pages/schedule/forms/schedule-form/schedule-form.component.html
+++ b/src/app/modules/appointment/pages/schedule/forms/schedule-form/schedule-form.component.html
@@ -25,7 +25,7 @@
         id="desde"
         label="Desde"
         [float]="false"
-        [type]="'datetime-local'"
+        [type]="'time'"
         [formGroup]="form"
         [required]="true"
       ></app-input>
@@ -35,7 +35,7 @@
         id="hasta"
         label="Hasta"
         [float]="false"
-        [type]="'datetime-local'"
+        [type]="'time'"
         [formGroup]="form"
         [required]="true"
       ></app-input>
