--- a/src/app/modules/appointment/pages/service/forms/service-form/service-form.component.html
+++ b/src/app/modules/appointment/pages/service/forms/service-form/service-form.component.html
@@ -26,7 +26,7 @@
         label="Tiempo aproximado"
         placeholder="Ej: Bago"
         [float]="false"
-        [type]="'datetime-local'"
+        [type]="'time'"
         [formGroup]="form"
         [required]="true"
       ></app-input>
@@ -37,7 +37,7 @@
         label="Tiempo espera"
         placeholder="Ej: Bago"
         [float]="false"
-        [type]="'datetime-local'"
+        [type]="'time'"
         [formGroup]="form"
         [required]="true"
       ></app-input>
