--- a/src/app/modules/appointment/pages/enterprise/components/location-enterprise/location-enterprise.component.html
+++ b/src/app/modules/appointment/pages/enterprise/components/location-enterprise/location-enterprise.component.html
@@ -3,6 +3,9 @@
     <section class="mt-5">
       <span class="font-normal text-x">
         <strong>Ubicación google map: </strong> {{ uri }}
+        <a mat-button color="primary" href="{{ uri }}" target="_blank"
+          >Ir a maps</a
+        >
       </span>
     </section>
     <section class="mt-5 text-center">
