--- a/src/app/modules/appointment/pages/service/components/service-table/service-table.component.html
+++ b/src/app/modules/appointment/pages/service/components/service-table/service-table.component.html
@@ -40,14 +40,14 @@
           </span>
         </section>
 
-        <section *ngIf="col.header === 'Tiempo'">
+        <section *ngIf="col.header === 'Tiempo (min)'">
           <strong class="text-sm font-medium">Aproximado: </strong
           ><span class="text-sm font-normal">
-            {{ rowData[col.field] | date: "h:mm" }}
+            {{ rowData[col.field] }} min
           </span>
           <br />
           <strong class="text-sm font-medium">Espera: </strong
-          >{{ rowData["tiempoEspera"] | date: "h:mm" }}
+          >{{ rowData["tiempoEspera"] }} min
         </section>
 
         <section *ngIf="col.header === 'Acciones'">
